[tool.poetry]
name = "ddt4all"
version = "0.1.0"
description = ""
authors = ["Reynaldo Gil <gilcu2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "~5.15.7"
PyQtWebEngine = "~5.15.6"
PyQt5-stubs = "~5.15.6.0"
pyusb = "~1.2.1"
crcmod = "~1.7"
pyserial = "~3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
